# EffectiveBitmap

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/effective/bitmap/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: effective-bitmap.c  effective-bitmap.cpp
app/src/main/cpp/include/: jpeglib.h
app/src/main/cpp/jpeg/android/: config.h
app/src/main/java/com/effective/bitmap/: MainActivity.java
app/src/main/java/com/effective/bitmap/utils/: EffectiveBitmapUtils.java  UriToPathUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/effective/bitmap/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
